--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div id="weather_forecast" ng-controller="weatherForecastController" weather-forecasts></div>
      
-    <div id="tickers" ng-controller="tickersController" tickers></div>   
+    <div id="tickers" tickers></div>   
 </div>  
 </body>
 </html>
