--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <script src="js/utilities.js"></script>
     
-    <script src="js/vendor/angular/angular.min.js"></script>
+    <script src="js/vendor/angular/angular.js"></script>
     <script src="js/vendor/angular/angular-route.min.js"></script>
     <script src="js/vendor/angular/angular-sanitize.min.js"></script>
     <script src="js/vendor/angular/angular-css.js"></script>
