--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <div id="weather_forecast" ng-controller="weatherForecastController" weather-forecasts></div>
     </div>
      
-    <div id="tickers" tickers></div>   
+    <div id="ticker1" ticker="ticker1"></div>   
+    <div id="ticker2" ticker="ticker2"></div>   
 </div>  
 </body>
 </html>
